--- a/src/shared/styles/index.scss
+++ b/src/shared/styles/index.scss
@@ -34,6 +34,9 @@ body {
 .title {
   font-size: 5rem;
 }
+.title1 {
+  font-size: 5rem;
+}
 .desc {
   font-family: 'Quicksand', sans-serif;
 }
@@ -65,6 +68,9 @@ body {
   /* For desktop: */
   .title {
     font-size: 7rem;
+  }
+  .title1 {
+    font-size: 12rem;
   }
 }
 @media only screen and (min-width: 769px) {
